# terraform-provider-teamcity

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  repositories.bzl
.github/workflows/: main.yml  release.yml
teamcity/: BUILD.bazel  resource_build_config.go  resource_build_trigger_schedule.go  resource_project.go
